# Hackathon-II-Phase-I

./: CLAUDE.md  GITHUB_MASTER_ISSUE.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  tasks.json
.claude/: settings.local.json
.specify/memory/: constitution.md
history/adr/: 001-multi-agent-architecture.md
history/prompts/constitution/: 001-evolution-of-todo.constitution.prompt.md
history/prompts/general/: 001-integrate-language-and-voice.misc.prompt.md  002-fix-encoding-and-verify.misc.prompt.md
history/prompts/todo-app/: 002-phase-i-cli-todo-application-specification.spec.prompt.md  003-phase-i-implementation-plan.plan.prompt.md  004-phase-i-implementation-tasks.tasks.prompt.md  005-cli-app-testing.misc.prompt.md  006-create-spec-file.spec.prompt.md  007-multi-agent-architecture-adr.adr.prompt.md  008-update-implementation-plan.plan.prompt.md  009-tasks-to-github-issues.tasks.prompt.md  010-master-tracking-issue-created.tasks.prompt.md  011-implementation-workflow.red.prompt.md
specs/todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/todo-app/contracts/: cli-ui-agent.md  main-agent.md  search-sort-agent.md  state-manager.md  storage-agent.md
src/: main.py
src/agents/: __init__.py  cli_ui_agent.py  i18n_agent.py  main_agent.py  search_sort_agent.py  state_manager.py  storage_agent.py  voice_agent.py
src/models/: __init__.py  task.py
tests/integration/: test_cli_flow.py
tests/unit/: test_search_sort.py  test_state_manager.py  test_storage_agent.py  test_task_model.py
